<resources>
    <string name="app_name">My Book Sorter</string>
    <string name="frontPageTitle">Sort my books! </string>
    <string name="btnMainActivity">Start</string>
    <string name="BookInformationBookID">ID</string>
    <string name="BookInformationBookName">Book Name:</string>
    <string name="BookInformationBookYear">Book Year:</string>
    <string name="BookInformationBookPages">Number of pages:</string>
    <string name="BookInformationBookCurrentPage">Current page:</string>
    <string name="BookInformationYearPublished">Year book was published:</string>

    <string name="BookInformationViewBooks">View Books</string>

    <string name="BookInformationUpdateBookID">ID</string>
    <string name="BookInformationUpdateBookName">Update Book Name:</string>
    <string name="BookInformationUpdateBookYear">Update Book Year:</string>
    <string name="BookInformationUpdateBookPages">Update Number of pages:</string>
    <string name="BookInformationUpdateBookCurrentPage">Update Current page:</string>
    <string name="BookInformationUpdateYearPublished">Update Year book was published:</string>
    <string name="BookInformationUpdateBookDesc">Update book description:</string>

    <string name="DeleteRecord">Delete book:</string>
    <string name="btnDeleteRecord">Delete book record</string>

    <string name="btnSearchText">Search</string>


    <string name="BookInformationBookDescription">Book description</string>
    <string name="saveBookInformation">Save Book Information</string>
    <string name="searchForBookID">Enter a book to search for</string>
    <string name="btnSearchBookIDDelete">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
