<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:id="@+id/navigationDrawerLayout"
    tools:context="com.example.alexb.booksorter.AddABook">

    <FrameLayout
        android:id="@+id/updateFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:id="@+id/relativeContainer"
        android:layout_height="match_parent"
        android:weightSum="1">
        <TextView
            android:id="@+id/txtViewUpdateHeading"
            android:layout_width="match_parent"
            android:text="Update a book:"
            android:textSize="18dp"
            android:gravity="center"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/dropDownBookID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></Spinner>
        <TextView
            android:id="@+id/txtViewBookName"
            android:text="@string/BookInformationUpdateBookName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/txtUpdateBookName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <TextView
            android:id="@+id/txtViewUpdateBookAuthor"
            android:text="Update Book Author:"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/txtUpdateBookAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txtViewBookYear"
            android:text="@string/BookInformationUpdateBookYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/txtUpdateBookYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <TextView
            android:id="@+id/txtViewBookPages"
            android:text="@string/BookInformationUpdateBookPages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/txtUpdateBookPages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/txtViewBookCurrentPage"
            android:text="@string/BookInformationUpdateBookCurrentPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/txtBookUpdateCurrentPage"
            android:layout_above="@+id/txtViewBookDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/txtViewBookDesc"
            android:text="@string/BookInformationUpdateBookDesc"
            android:layout_width="wrap_content"
            android:layout_above="@+id/txtBookDescription"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/txtUpdateBookDescription"
            android:layout_above="@+id/btnSaveBookData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.38" />

        <TextView
            android:id="@+id/txtViewBookImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/imgViewUpdateBook"
            android:layout_width="match_parent"
            android:src="@drawable/defaultbookimagemdpi"
            android:layout_height="101dp" />
        <Button
            android:id="@+id/btnSaveBookUpdateData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="Update Book Information" />
    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/nav_items" />


</android.support.v4.widget.DrawerLayout>